añadi un nuevo parrafo con contenido lorem

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Lanfing page 3</h1>
     <p><b>Practica final en git y github</b></p>
+    <p><u>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam ad delectus est nesciunt sit explicabo numquam. Dignissimos placeat est laborum eos? Possimus provident placeat ad odit natus sint harum quidem.</u></p>
     <footer>Todos los derechos reservados</footer>
 </body>
 </html>
